--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -1,27 +1,34 @@
- .app-footer {
-     background-color: #4CAF50;
-     color: white;
-     padding: 20px 0;
-     text-align: center;
- }
+//  .app-footer {
+//     // display: flex;
+//      background-color: #4CAF50;
+//      color: white;
+//      padding: 20px 0;
+//     //  text-align: center;
+//      position: sticky;
+//      bottom: 0;
+//      width: 100%;
 
- .footer-content {
-     display: flex;
-     flex-direction: column;
-     align-items: center;
- }
+//  }
 
- .social-icons {
-     margin-top: 10px;
- }
 
- .social-icons a {
-     color: white;
-     margin: 0 10px;
-     text-decoration: none;
-     transition: color 0.3s;
- }
 
- .social-icons a:hover {
-     color: #45a049;
- }
+//  .footer-content {
+//      display: flex;
+//      flex-direction: column;
+//      align-items: center;
+//  }
+
+//  .social-icons {
+//      margin-top: 10px;
+//  }
+
+//  .social-icons a {
+//      color: white;
+//      margin: 0 10px;
+//      text-decoration: none;
+//      transition: color 0.3s;
+//  }
+
+//  .social-icons a:hover {
+//      color: #45a049;
+//  }
