--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,29 @@
 /* src/index.css */
-body {
+/* body {
     margin: 0;
     font-family: Arial, sans-serif;
     background-color: #f0f0f0;
-}
+} */
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
 
 #root {
     display: flex;
     flex-direction: column;
+    max-height: 500vh;
+    max-width: 100%;
+}
+
+.home-container{
+    display: flex;
+    flex-direction: column;
     min-height: 100vh;
+}
+
+main{
+    flex: 1;
 }
