--- a/src/pages/HomePage.scss
+++ b/src/pages/HomePage.scss
@@ -1,11 +1,9 @@
-.App {
+.home-container{
     display: flex;
     flex-direction: column;
     min-height: 100vh;
 }
 
-main {
+main{
     flex: 1;
-    padding: 2rem;
-    text-align: center;
 }
