--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,8 @@
 /* src/index.css */
+import 'bootstrap/dist/css/bootstrap.min.css';
+import 'jquery';
+import 'popper.js';
+import 'bootstrap/dist/js/bootstrap.bundle.min';
 /* body {
     margin: 0;
     font-family: Arial, sans-serif;
