--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -4,9 +4,11 @@
   z-index: 1000;
   position: sticky;
   top: 0;
+
+
   justify-content: space-between;
   align-items: center;
-  background-color: #FFFFFF;
+  background-color: #FEE7ED;
   padding: 5px 20px;
 }
 
