--- a/src/components/ModalRegister.scss
+++ b/src/components/ModalRegister.scss
@@ -1,4 +1,3 @@
-// ModalLogin.scss
 .modal-overlay {
     position: fixed;
     top: 0;
@@ -56,34 +55,7 @@ h2 {
     }
 }
 
-.login-options {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 20px;
-
-    .remember-me {
-        display: flex;
-        align-items: center;
-        gap: 5px;
-        color: #666;
-
-        input {
-            margin: 0;
-        }
-    }
-
-    .forgot-password {
-        color: #4caf50;
-        text-decoration: none;
-
-        &:hover {
-            text-decoration: underline;
-        }
-    }
-}
-
-.login-submit-btn {
+.register-submit-btn {
     width: 100%;
     background-color: #4caf50;
     color: white;
@@ -166,18 +138,14 @@ h2 {
     }
 }
 
-.register-link {
+.login-link {
     text-align: center;
     color: #666;
     font-size: 0.9rem;
 
-    .register-now {
+    .login-now {
         color: #4caf50;
         text-decoration: none;
-        background: none;
-        border: none;
-        padding: 0;
-        cursor: pointer;
 
         &:hover {
             text-decoration: underline;
