--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -36,7 +36,7 @@
 
 .nav-list a {
   text-decoration: none;
-  color: #A0A0A0;
+  color: #0f1b4c;
   font-size: 1.2rem;
   transition: box-shadow 0.3s ease;
 }
