--- a/src/components/Intro.scss
+++ b/src/components/Intro.scss
@@ -13,20 +13,21 @@
   color: white;
   text-align: center;
   overflow: hidden;
-  position: relative;
+  position: relative; // Đã có sẵn, cần để absolute hoạt động
   border-radius: 15px;
 }
 
-.intro-content {
-  padding-top: 5rem;
-}
+// .intro-content {
+//   padding-top: 0.5rem;
+// }
 
 .booking-container {
   width: 100%;
   padding: 2rem;
   background-color: rgba(255, 255, 255, 0.9);
-  margin-top: auto;
-  margin-bottom: 2rem;
+  position: absolute; // Thêm position absolute
+  bottom: 0; // Đặt sát đáy của header-container
+  left: 0;
 }
 
 .section-container {
@@ -45,7 +46,7 @@
   border: 2px solid red;
   border-radius: 15px;
   box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.1);
-  max-width: 1350px;
+  max-width: 1200px;
   height: 40px;
   margin: 0 auto;
 }
