--- a/src/components/Intro.scss
+++ b/src/components/Intro.scss
@@ -43,7 +43,7 @@
   justify-content: center;
   flex-wrap: wrap;
   background-color: var(--white);
-  border: 2px solid red;
+  // border: 2px solid red;
   border-radius: 15px;
   box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.1);
   max-width: 1200px;
