--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ import 'bootstrap/dist/js/bootstrap.bundle.min'; */
     background-color: #f0f0f0;
 } */
 body {
-    font-family: Arial, sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
